--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="font.css"/>
     <meta
       name="Sistema Investigación"
       content="Sistema de información para la gestión de proyectos de investigación de la Universidad Católica Luis Amigó"
